--- a/index.html
+++ b/index.html
@@ -80,15 +80,18 @@
 			</div>
 			<div class="col-lg-6">
 				<img src="/img/fondo.jpg" alt="Fondo verde" class="method-img">
+				<img src="/img/iconos/metodologia-icon.png" alt="Metodologia">
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<p class="h1">Servicios</p>
+				<p class="h1-lead">Servicios</p>
 				<p class="lead">
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe repudiandae aperiam minus impedit? Error doloremque laborum laudantium molestiae cumque eveniet alias excepturi enim odit quae, provident blanditiis iste ut? Eaque!
 					Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
 				</p>
 			</div>
+
 			<div class="col-md-2"></div>
 			<div class="col-md-2">
 				<img src="/img/iconos/servicios-icon/educacion.png" alt="Educacion" class="img-service">
@@ -102,6 +105,89 @@
 				<img src="/img/iconos/servicios-icon/bienestar.png" alt="Bienestar" class="img-service">
 			</div>
 			<div class="col-md-2"></div>
+
+			<div class="col-md-2"></div>
+			<div class="col-md-2">
+				<h2 class="content-title">Educación para el Desarrollo Sostenible</h2>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<h2 class="content-title">Mitigación Cambio Climático</h2>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<h2 class="content-title">Bienestar Ocupacional</h2>
+			</div>
+			<div class="col-md-2"></div>
+
+			<div class="col-md-2"></div>
+			<div class="col-md-2">
+				<p class="content-p">
+					Dolorem a blanditiis vero, nihil est laudantium, quisquam dicta velit at tenetur expedita rerum animi voluptatibus.
+				</p>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<p class="content-p">
+					Dolorem a blanditiis vero, nihil est laudantium, quisquam dicta velit at tenetur expedita rerum animi voluptatibus.
+				</p>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<p class="content-p">
+					Dolorem a blanditiis vero, nihil est laudantium, quisquam dicta velit at tenetur expedita rerum animi voluptatibus.
+				</p>
+			</div>
+			<div class="col-md-2"></div>
+
+			<div class="col-md-2"></div>
+			<div class="col-md-2">
+				<img src="/img/iconos/servicios-icon/seguridad-icon.png" alt="Seguridad" class="img-service">
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<img src="/img/iconos/servicios-icon/manejo-de-agua.png" alt="Manejo de aguas" class="img-service">
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<img src="/img/iconos/servicios-icon/agricultura-icon.png" alt="Agricultura" class="img-service">
+			</div>
+			<div class="col-md-2"></div>
+
+			<div class="col-md-2"></div>
+			<div class="col-md-2">
+				<h2 class="content-title">Consultorías en Seguridad Industrial y Medio Ambiente</h2>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<h2 class="content-title">Manejo de Aguas</h2>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<h2 class="content-title">Agricultura</h2>
+			</div>
+			<div class="col-md-2"></div>
+
+			<div class="col-md-2"></div>
+			<div class="col-md-2">
+				<p class="content-p">
+					Dolorem a blanditiis vero, nihil est laudantium, quisquam dicta velit at tenetur expedita rerum animi voluptatibus.
+				</p>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<p class="content-p">
+					Dolorem a blanditiis vero, nihil est laudantium, quisquam dicta velit at tenetur expedita rerum animi voluptatibus.
+				</p>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-2">
+				<p class="content-p">
+					Dolorem a blanditiis vero, nihil est laudantium, quisquam dicta velit at tenetur expedita rerum animi voluptatibus.
+				</p>
+			</div>
+			<div class="col-md-2"></div>
+
 		</div>
 		
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
