Modified images url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container-fluid">
 				<ul class="nav justify-content-center">
 					<li class="nav-logo">
-					<img src="/img/ecomunidad-logo.png" alt="Ecomunidad logo">
+					<img src="img/ecomunidad-logo.png" alt="Ecomunidad logo">
 					</li>
 					<li class="nav-item">
 					<a class="nav-link active" href="#">Nosotros</a>
@@ -38,7 +38,7 @@
 					</li>
 				</ul>
 	
-			<img src="/img/semilla.jpg" class="img-fluid" alt="Responsive image">
+			<img src="img/semilla.jpg" class="img-fluid" alt="Responsive image">
 			
 			<blockquote class="blockquote text-center description">
 				<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis amet enim quos blanditiis delectus minus quidem error doloribus dolores suscipit incidunt expedita beatae quam assumenda tenetur, nobis corporis nihil aliquam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -47,11 +47,11 @@
 
 				<div class="col-md-2"></div>
 				<div class="col-md-2">
-					<img src="/img/iconos/mision/mision.png" alt="Mision" class="img-thumbnail">
+					<img src="img/iconos/mision/mision.png" alt="Mision" class="img-thumbnail">
 				</div>
 				<div class="col-md-4"></div>
 				<div class="col-md-2">
-					<img src="/img/iconos/mision/vision.png" alt="Vision" class="img-thumbnail">
+					<img src="img/iconos/mision/vision.png" alt="Vision" class="img-thumbnail">
 				</div>
 				<div class="col-md-2"></div>
 			</div>
@@ -76,11 +76,11 @@
 		</div>
 		<div class="row method">
 			<div class="col-lg-6">
-				<img src="/img/metodo.JPG" alt="Metodo" class="method-img">
+				<img src="img/metodo.JPG" alt="Metodo" class="method-img">
 			</div>
 			<div class="col-lg-6">
-				<img src="/img/fondo.jpg" alt="Fondo verde" class="method-img">
-				<img src="/img/iconos/metodologia-icon.png" alt="Metodologia">
+				<img src="img/fondo.jpg" alt="Fondo verde" class="method-img">
+				<img src="img/iconos/metodologia-icon.png" alt="Metodologia">
 			</div>
 		</div>
 		<div class="row">
@@ -94,15 +94,15 @@
 
 			<div class="col-md-2"></div>
 			<div class="col-md-2">
-				<img src="/img/iconos/servicios-icon/educacion.png" alt="Educacion" class="img-service">
+				<img src="img/iconos/servicios-icon/educacion.png" alt="Educacion" class="img-service">
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-2">
-				<img src="/img/iconos/servicios-icon/mitigacion.png" alt="Mitigacion" class="img-service">
+				<img src="img/iconos/servicios-icon/mitigacion.png" alt="Mitigacion" class="img-service">
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-2">
-				<img src="/img/iconos/servicios-icon/bienestar.png" alt="Bienestar" class="img-service">
+				<img src="img/iconos/servicios-icon/bienestar.png" alt="Bienestar" class="img-service">
 			</div>
 			<div class="col-md-2"></div>
 
@@ -142,15 +142,15 @@
 
 			<div class="col-md-2"></div>
 			<div class="col-md-2">
-				<img src="/img/iconos/servicios-icon/seguridad-icon.png" alt="Seguridad" class="img-service">
+				<img src="img/iconos/servicios-icon/seguridad-icon.png" alt="Seguridad" class="img-service">
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-2">
-				<img src="/img/iconos/servicios-icon/manejo-de-agua.png" alt="Manejo de aguas" class="img-service">
+				<img src="img/iconos/servicios-icon/manejo-de-agua.png" alt="Manejo de aguas" class="img-service">
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-2">
-				<img src="/img/iconos/servicios-icon/agricultura-icon.png" alt="Agricultura" class="img-service">
+				<img src="img/iconos/servicios-icon/agricultura-icon.png" alt="Agricultura" class="img-service">
 			</div>
 			<div class="col-md-2"></div>
 
